--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "keywords": ["democracy films", "democracy", "films"],
   "author": "Stephen Brooks",
-  "url": "https://stevenswebdesigns.herokuapp.com",
+  "url": "https://www.clear-web-designs.com",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
