--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "worker": "node index.js",
     "postinstall": "echo 'films'"
   },
-  "keywords": ["democracy films", "democracy", "films"],
+  "keywords": [
+    "democracy films",
+    "democracy",
+    "films"
+  ],
   "author": "Stephen Brooks",
   "url": "https://www.clear-web-designs.com",
   "license": "ISC",
@@ -25,9 +29,10 @@
     "method-override": "^3.0.0",
     "mongoose": "^6.2.3",
     "mongoose-unique-validator": "^3.0.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "multer": "^1.4.4"
   },
-  "ROOT_URL" : "http://democracyanddissent.com/",
+  "ROOT_URL": "http://democracyanddissent.com/",
   "engines": {
     "node": "17.7.1"
   },
